@@ -1,7 +1,7 @@
+/org/
+/test/
 /ConverterSample2.class
 /ConverterSample4.class
 /NoPackageTest.class
-/org/
-/test/
 /test_result/
 /testhelper/
