@@ -1,1 +1,0 @@
-testng -hostfile test\hosts.properties -d test\test-output %1 %2 %3 %4 %5 test\testng.xml
